--- a/ZTM_ML_307_iris_data_1.ipynb
+++ b/ZTM_ML_307_iris_data_1.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOLQOhFKeDNYabnVqEGSP1b",
+      "authorship_tag": "ABX9TyNqtdmS1PpSgQdqsQ8uU0Ah",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -581,6 +581,28 @@
           ]
         }
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Optional: K Nearest Neighbour\n",
+        "If you would like to learn more about K-Nearest Neighbours algorithm for classification, this interactive demo will help you understand the parameters that go into it, including the N value we experimented with in the previous video: http://vision.stanford.edu/teaching/cs231n-demos/knn/\n",
+        "\n",
+        "To learn more about how this algorithm works, you can also check out this article: https://www.analyticsvidhya.com/blog/2018/08/k-nearest-neighbor-introduction-regression-python/"
+      ],
+      "metadata": {
+        "id": "3sBnKXkoowIp"
+      }
+    },
+    {
+      "cell_type": "markdown",
+      "source": [
+        "Next part:\n",
+        "6. Improving the data"
+      ],
+      "metadata": {
+        "id": "H1x3gHVOoxIN"
+      }
     }
   ]
 }
